@@ -63,7 +63,7 @@ Index: linux-2.6.22-source/drivers/block/cobd.c
  #define PBD_BLOCK_SIZE  512
  
  static int hardsect_size = 512;
-@@ -249,12 +246,9 @@
+@@ -252,12 +249,9 @@
  		disk->first_minor = i;
  		disk->fops = &cobd_fops;
  		sprintf(disk->disk_name, "cobd%d", i);
@@ -76,7 +76,7 @@ Index: linux-2.6.22-source/drivers/block/cobd.c
  	for (i=0; i < cobd_max; i++)
  		add_disk(cobd_disks[i]);
  
-@@ -265,7 +259,6 @@
+@@ -268,7 +262,6 @@
  fail_malloc4:
  	while (i--)
  		blk_cleanup_queue(cobd_disks[i]->queue);
@@ -84,7 +84,7 @@ Index: linux-2.6.22-source/drivers/block/cobd.c
  	i = cobd_max;
  
  fail_malloc3:
-@@ -381,12 +374,11 @@
+@@ -384,12 +377,11 @@
  	if (alias->gendisk == NULL) {
  		static struct gendisk **gendisks;
  
@@ -98,7 +98,7 @@ Index: linux-2.6.22-source/drivers/block/cobd.c
  
  		if (!alias->major->registered) {
  			if (register_blkdev(alias->major->number, alias->major->name)) {
-@@ -400,7 +392,6 @@
+@@ -403,7 +395,6 @@
  		}
  
  		alias->gendisk = gendisks;
@@ -106,7 +106,7 @@ Index: linux-2.6.22-source/drivers/block/cobd.c
  	}
  
  	if (alias->gendisk[index] != NULL) {
-@@ -430,7 +421,6 @@
+@@ -433,7 +424,6 @@
  		sprintf(disk->disk_name, "%s%d", alias->name, index);
  	else
  		sprintf(disk->disk_name, "%s", alias->name);
@@ -114,7 +114,7 @@ Index: linux-2.6.22-source/drivers/block/cobd.c
  	disk->private_data = cobd;
  	add_disk(disk);
  	alias->gendisk[index] = disk;
-@@ -477,7 +467,6 @@
+@@ -480,7 +470,6 @@
  		put_disk(cobd_disks[i]);
  	}
  
@@ -122,7 +122,7 @@ Index: linux-2.6.22-source/drivers/block/cobd.c
  	if (unregister_blkdev(COLINUX_MAJOR, "cobd"))
  		printk(KERN_WARNING "cobd: cannot unregister blkdev\n");
  
-@@ -504,7 +493,6 @@
+@@ -507,7 +496,6 @@
  			put_disk(disk);
  		}
  
